<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item android:title="@string/menu_access">
            <menu>
                <item
                    android:id="@+id/edit"
                    android:icon="@drawable/ic_edit"
                    android:title="@string/menu_edit" />

                <item
                    android:id="@+id/upload"
                    android:icon="@drawable/ic_upload"
                    android:title="@string/menu_upload" />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/gruop2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/logout"
            android:title="@string/menu_logout"
            android:icon="@drawable/ic_logout" />
    </group>
</menu>