<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            app:tint="@color/button_color"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/newbieTitle"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/profile_border"
            android:contentDescription="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/newbieImage"
            android:textColor="@color/blue"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/profile"
            app:layout_constraintStart_toStartOf="@+id/profile"
            app:layout_constraintTop_toBottomOf="@+id/profile" />

        <EditText
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="@string/newbieName"
            android:background="@drawable/bulletin_box"
            android:hint="@string/newbieName"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <EditText
            android:id="@+id/profileBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="@string/newbieBirth"
            android:background="@drawable/bulletin_box"
            android:hint="@string/newbieBirth"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileName" />

        <EditText
            android:id="@+id/profileAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="@string/newbieAddress"
            android:background="@drawable/bulletin_box"
            android:hint="@string/newbieAddress"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileBirth" />

        <EditText
            android:id="@+id/profileContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="@string/newbieContact"
            android:background="@drawable/bulletin_box"
            android:hint="@string/newbieContact"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileAddress" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/checkboxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileContact">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <CheckBox
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newbieMale"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/newbieFemale"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/male"
                    app:layout_constraintTop_toTopOf="@+id/male" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <CheckBox
                android:id="@+id/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newbieNew"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender" />

            <CheckBox
                android:id="@+id/baptism"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/newbieBaptism"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/beginner"
                app:layout_constraintTop_toTopOf="@+id/beginner" />

            <CheckBox
                android:id="@+id/ride"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/newbieRide"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/baptism"
                app:layout_constraintTop_toTopOf="@+id/baptism" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_background"
            android:text="@string/upload"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkboxes" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upload" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>