<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            app:tint="@color/button_color"/>

        <ImageView
            android:id="@+id/titleLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/themarks" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textColor="@color/lolmc"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/titleLogo"
            app:layout_constraintStart_toStartOf="@+id/titleLogo"
            app:layout_constraintTop_toBottomOf="@+id/titleLogo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/worship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/white"
            android:elevation="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <ImageView
                android:id="@+id/worshipLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/description"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/hand"
                app:tint="@color/lolmc" />

            <TextView
                android:id="@+id/worshipTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/worship1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/worshipLogo"
                app:layout_constraintStart_toEndOf="@+id/worshipLogo"
                app:layout_constraintTop_toTopOf="@+id/worshipLogo" />

            <TextView
                android:id="@+id/sunday1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/worship2"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/worshipLogo" />

            <TextView
                android:id="@+id/meeting1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/meeting1"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/sunday1"
                app:layout_constraintTop_toBottomOf="@+id/sunday1" />

            <TextView
                android:id="@+id/friday1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/worship4"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/sunday1"
                app:layout_constraintTop_toBottomOf="@+id/meeting1" />

            <TextView
                android:id="@+id/sunday2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/worship3"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/friday1"
                app:layout_constraintTop_toTopOf="@+id/sunday1" />

            <TextView
                android:id="@+id/meeting2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meeting2"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/friday1"
                app:layout_constraintTop_toTopOf="@+id/meeting1" />

            <TextView
                android:id="@+id/friday2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/worship5"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/friday1"
                app:layout_constraintTop_toTopOf="@+id/friday1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/white"
            android:elevation="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/worship">

            <ImageView
                android:id="@+id/locationLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/description"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/location"
                app:tint="@color/lolmc" />

            <TextView
                android:id="@+id/locationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/location1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/locationLogo"
                app:layout_constraintStart_toEndOf="@+id/locationLogo"
                app:layout_constraintTop_toTopOf="@+id/locationLogo" />

            <TextView
                android:id="@+id/location1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lolmc"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/locationLogo"
                app:layout_constraintTop_toBottomOf="@+id/locationLogo" />

            <TextView
                android:id="@+id/location2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/location2"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/location1"
                app:layout_constraintTop_toBottomOf="@+id/location1" />

            <TextView
                android:id="@+id/location3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/contact"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/location2"
                app:layout_constraintTop_toBottomOf="@+id/location2" />

            <TextView
                android:id="@+id/faclity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/facility"
                android:textColor="@color/manage_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/locationTitle"
                app:layout_constraintStart_toEndOf="@+id/locationTitle"
                app:layout_constraintTop_toTopOf="@+id/locationTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>